==> AnQ-LH/gd32f427/User/src/bsp_pwm.c <==
#include "bsp_pwm.h"
#include "bsp.h"

void bsp_RCC_GPIO_Enable(uint32_t GPIOx)
{
	if (GPIOx == GPIOA)			rcu_periph_clock_enable(RCU_GPIOA);
	else if (GPIOx == GPIOB)	rcu_periph_clock_enable(RCU_GPIOB);
	else if (GPIOx == GPIOC)	rcu_periph_clock_enable(RCU_GPIOC);
	else if (GPIOx == GPIOD)	rcu_periph_clock_enable(RCU_GPIOD);
	else if (GPIOx == GPIOE)	rcu_periph_clock_enable(RCU_GPIOE);
	else if (GPIOx == GPIOF)	rcu_periph_clock_enable(RCU_GPIOF);
	else if (GPIOx == GPIOG)	rcu_periph_clock_enable(RCU_GPIOG);
	else
	{
		
	}
}

void bsp_RCC_TIM_Enable(uint32_t TIMx)
{
	if (TIMx == TIMER0)			rcu_periph_clock_enable(RCU_TIMER0);
	else if (TIMx == TIMER1)	rcu_periph_clock_enable(RCU_TIMER1);
	else if (TIMx == TIMER2)	rcu_periph_clock_enable(RCU_TIMER2);
	else if (TIMx == TIMER3)	rcu_periph_clock_enable(RCU_TIMER3);
	else if (TIMx == TIMER4)	rcu_periph_clock_enable(RCU_TIMER4);
	else if (TIMx == TIMER5)	rcu_periph_clock_enable(RCU_TIMER5);
	else if (TIMx == TIMER6)	rcu_periph_clock_enable(RCU_TIMER6);
	else if (TIMx == TIMER7)	rcu_periph_clock_enable(RCU_TIMER7);
	else if (TIMx == TIMER8)	rcu_periph_clock_enable(RCU_TIMER8);
	else if (TIMx == TIMER9)	rcu_periph_clock_enable(RCU_TIMER9);
	else if (TIMx == TIMER10)	rcu_periph_clock_enable(RCU_TIMER10);
	else if (TIMx == TIMER11)	rcu_periph_clock_enable(RCU_TIMER11);
	else if (TIMx == TIMER12)	rcu_periph_clock_enable(RCU_TIMER12);
	else if (TIMx == TIMER13)	rcu_periph_clock_enable(RCU_TIMER13);
	else
	{

	}
}

void bsp_RCC_TIM_Disable(uint32_t TIMx)
{
	if (TIMx == TIMER0)			rcu_periph_clock_disable(RCU_TIMER0);
	else if (TIMx == TIMER1)	rcu_periph_clock_disable(RCU_TIMER1);
	else if (TIMx == TIMER2)	rcu_periph_clock_disable(RCU_TIMER2);
	else if (TIMx == TIMER3)	rcu_periph_clock_disable(RCU_TIMER3);
	else if (TIMx == TIMER4)	rcu_periph_clock_disable(RCU_TIMER4);
	else if (TIMx == TIMER5)	rcu_periph_clock_disable(RCU_TIMER5);
	else if (TIMx == TIMER6)	rcu_periph_clock_disable(RCU_TIMER6);
	else if (TIMx == TIMER7)	rcu_periph_clock_disable(RCU_TIMER7);
	else if (TIMx == TIMER8)	rcu_periph_clock_disable(RCU_TIMER8);
	else if (TIMx == TIMER9)	rcu_periph_clock_disable(RCU_TIMER9);
	else if (TIMx == TIMER10)	rcu_periph_clock_disable(RCU_TIMER10);
	else if (TIMx == TIMER11)	rcu_periph_clock_disable(RCU_TIMER11);
	else if (TIMx == TIMER12)	rcu_periph_clock_disable(RCU_TIMER12);
	else if (TIMx == TIMER13)	rcu_periph_clock_disable(RCU_TIMER13);
	else
	{

	}
}

uint8_t bsp_GetAFofTIM(uint32_t TIMx)
{
	uint8_t ret = 0;

	if (TIMx == TIMER0) ret = GPIO_AF_1;
	else if (TIMx == TIMER1) ret = GPIO_AF_1;
	
	else if (TIMx == TIMER2) ret = GPIO_AF_2;
	else if (TIMx == TIMER3) ret = GPIO_AF_2;
	else if (TIMx == TIMER4) ret = GPIO_AF_2;
	
	else if (TIMx == TIMER7) ret = GPIO_AF_3;
	else if (TIMx == TIMER8) ret = GPIO_AF_3;
	else if (TIMx == TIMER9) ret = GPIO_AF_3;
	else if (TIMx == TIMER10) ret = GPIO_AF_3;
	
	else if (TIMx == TIMER11) ret = GPIO_AF_9;
	else if (TIMx == TIMER12) ret = GPIO_AF_9;
	else if (TIMx == TIMER13) ret = GPIO_AF_9;
	else
	{

	}
	
	return ret;
}

void bsp_ConfigTimGpio(uint32_t GPIOx, uint16_t GPIO_PinX, uint32_t TIMx)
{
	/* 使能GPIO时钟 */
	bsp_RCC_GPIO_Enable(GPIOx);

  	/* 使能TIM时钟 */
	bsp_RCC_TIM_Enable(TIMx);
	
	gpio_mode_set(GPIOx, GPIO_MODE_AF, GPIO_PUPD_NONE, GPIO_PinX);
    gpio_output_options_set(GPIOx, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, GPIO_PinX);
	gpio_af_set(GPIOx, bsp_GetAFofTIM(TIMx), GPIO_PinX);
}

void bsp_ConfigGpioOut(uint32_t GPIOx, uint16_t GPIO_PinX)
{
	bsp_RCC_GPIO_Enable(GPIOx);		/* 使能GPIO时钟 */
	
	gpio_mode_set(GPIOx, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, GPIO_PinX);
	gpio_output_options_set(GPIOx, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, GPIO_PinX);
}

void bsp_SetTIMOutPWM(uint32_t GPIOx, uint16_t GPIO_Pin, uint32_t TIMx, uint8_t _ucChannel, uint32_t _ulFreq, uint32_t _ulDutyCycle)
{
	timer_parameter_struct  TimHandle = {0};
	timer_oc_parameter_struct sConfig = {0};	
	uint16_t usPeriod;
	uint16_t usPrescaler;
	uint32_t pulse;
	uint32_t uiTIMxCLK;
	const uint16_t TimChannel[4] = {TIMER_CH_0, TIMER_CH_1, TIMER_CH_2, TIMER_CH_3};

	if (_ucChannel > 4)
	{

	}
	
	if (_ulDutyCycle == 0)
	{		
		//bsp_RCC_TIM_Disable(TIMx);		/* 关闭TIM时钟, 可能影响其他通道 */		
		bsp_ConfigGpioOut(GPIOx, GPIO_Pin);	/* 配置GPIO为推挽输出 */
		gpio_bit_reset(GPIOx, GPIO_Pin);	/* PWM = 0 */		/* PWM = 0 */		
		return;
	}
	else if (_ulDutyCycle == 10000)
	{
		//bsp_RCC_TIM_Disable(TIMx);		/* 关闭TIM时钟, 可能影响其他通道 */
		bsp_ConfigGpioOut(GPIOx, GPIO_Pin);	/* 配置GPIO为推挽输出 */		
		gpio_bit_set(GPIOx, GPIO_Pin);		/* PWM = 1 */			
		return;
	}
	
	/* 下面是PWM输出 */
	bsp_ConfigTimGpio(GPIOx, GPIO_Pin, TIMx);	/* 使能GPIO和TIM时钟，并连接TIM通道到GPIO */
	
	/*-----------------------------------------------------------------------
		gd32f4xx.c 文件中 void SetSysClock(void) 函数对时钟的配置如下：

		HCLK = SYSCLK / 1     (AHB1Periph)
		PCLK2 = HCLK / 2      (APB2Periph)
		PCLK1 = HCLK / 4      (APB1Periph)

		因为APB1 prescaler != 1, 所以 APB1上的TIMxCLK = PCLK1 x 2 = SystemCoreClock / 2;
		因为APB2 prescaler != 1, 所以 APB2上的TIMxCLK = PCLK2 x 2 = SystemCoreClock;

		APB1 定时器有 TIM1, TIM2 ,TIM3, TIM4, TIM5, TIM6, TIM11, TIM12,TIM13
		APB2 定时器有 TIM0, TIM7 ,TIM8, TIM9, TIM10

	----------------------------------------------------------------------- */
	
	if ((TIMx == TIMER0) || (TIMx == TIMER7) || (TIMx == TIMER8) || (TIMx == TIMER9) || (TIMx == TIMER10))
	{
		/* APB2 定时器时钟 = 200M */
		uiTIMxCLK = SystemCoreClock;
	}
	else	
	{
		/* APB1 定时器 = 100M */
		uiTIMxCLK = SystemCoreClock / 2;
	}

	if (_ulFreq < 100)
	{
		usPrescaler = 10000 - 1;					/* 分频比 = 10000 */
		usPeriod =  (uiTIMxCLK / 10000) / _ulFreq  - 1;		/* 自动重装的值 */
	}
	else if (_ulFreq < 3000)
	{
		usPrescaler = 100 - 1;					/* 分频比 = 100 */
		usPeriod =  (uiTIMxCLK / 100) / _ulFreq  - 1;		/* 自动重装的值 */
	}
	else	/* 大于4K的频率，无需分频 */
	{
		usPrescaler = 0;					/* 分频比 = 1 */
		usPeriod = uiTIMxCLK / _ulFreq - 1;	/* 自动重装的值 */
	}
	pulse = (_ulDutyCycle * usPeriod) / 10000;
    
	timer_deinit(TIMx);
	
	/*  PWM频率 = TIMxCLK / usPrescaler + 1）/usPeriod + 1）*/
	TimHandle.prescaler         = usPrescaler;
    TimHandle.alignedmode       = TIMER_COUNTER_EDGE;
    TimHandle.counterdirection  = TIMER_COUNTER_UP;
    TimHandle.period            = usPeriod;
    TimHandle.clockdivision     = TIMER_CKDIV_DIV1;
    TimHandle.repetitioncounter = 0;
	
	timer_init(TIMx, &TimHandle);

	/* 配置定时器PWM输出通道 */
	sConfig.ocpolarity  = TIMER_OC_POLARITY_HIGH;
    sConfig.outputstate = TIMER_CCX_ENABLE;
    sConfig.ocnpolarity  = TIMER_OCN_POLARITY_HIGH;
    sConfig.outputnstate = TIMER_CCXN_DISABLE;
    sConfig.ocidlestate  = TIMER_OC_IDLE_STATE_LOW;
    sConfig.ocnidlestate = TIMER_OCN_IDLE_STATE_LOW;
	timer_channel_output_mode_config(TIMx, TimChannel[_ucChannel], TIMER_OC_MODE_PWM0);
	
	timer_channel_output_config(TIMx, TimChannel[_ucChannel], &sConfig);
	
    timer_channel_output_shadow_config(TIMx, TimChannel[_ucChannel], TIMER_OC_SHADOW_DISABLE);
	
	/* 占空比 */
	timer_channel_output_pulse_value_config(TIMx, TimChannel[_ucChannel], pulse);
	
	/* 启动PWM输出 */
	timer_auto_reload_shadow_enable(TIMx);
	timer_enable(TIMx);
}

void bsp_SetTIMforInt(uint32_t TIMx, uint32_t _ulFreq, uint8_t _PreemptionPriority, uint8_t _SubPriority)
{
	timer_parameter_struct   TimHandle = {0};
	uint16_t usPeriod;
	uint16_t usPrescaler;
	uint32_t uiTIMxCLK;
	
	/* 使能TIM时钟 */
	bsp_RCC_TIM_Enable(TIMx);
	
	/*-----------------------------------------------------------------------
		gd32f4xx.c 文件中 void SetSysClock(void) 函数对时钟的配置如下：

		HCLK = SYSCLK / 1     (AHB1Periph)
		PCLK2 = HCLK / 2      (APB2Periph)
		PCLK1 = HCLK / 4      (APB1Periph)

		因为APB1 prescaler != 1, 所以 APB1上的TIMxCLK = PCLK1 x 2 = SystemCoreClock / 2;
		因为APB2 prescaler != 1, 所以 APB2上的TIMxCLK = PCLK2 x 2 = SystemCoreClock;

		APB1 定时器有 TIM1, TIM2 ,TIM3, TIM4, TIM5, TIM6, TIM11, TIM12,TIM13
		APB2 定时器有 TIM0, TIM7 ,TIM8, TIM9, TIM10

	----------------------------------------------------------------------- */
	if ((TIMx == TIMER0) || (TIMx == TIMER7) || (TIMx == TIMER8) || (TIMx == TIMER9) || (TIMx == TIMER10))
	{
		/* APB2 定时器时钟 = 168M */
		uiTIMxCLK = SystemCoreClock;
	}
	else	
	{
		/* APB1 定时器 = 84M */
		uiTIMxCLK = SystemCoreClock / 2;
	}

	if (_ulFreq < 100)
	{
		usPrescaler = 10000 - 1;					/* 分频比 = 10000 */
		usPeriod =  (uiTIMxCLK / 10000) / _ulFreq  - 1;		/* 自动重装的值 */
	}
	else if (_ulFreq < 3000)
	{
		usPrescaler = 100 - 1;					/* 分频比 = 100 */
		usPeriod =  (uiTIMxCLK / 100) / _ulFreq  - 1;		/* 自动重装的值 */
	}
	else	/* 大于4K的频率，无需分频 */
	{
		usPrescaler = 0;					/* 分频比 = 1 */
		usPeriod = uiTIMxCLK / _ulFreq - 1;	/* 自动重装的值 */
	}

	/* 
       定时器中断更新周期 = TIMxCLK / usPrescaler + 1）/usPeriod + 1）
	*/
	TimHandle.prescaler         = usPrescaler;
    TimHandle.alignedmode       = TIMER_COUNTER_EDGE;
    TimHandle.counterdirection  = TIMER_COUNTER_UP;
    TimHandle.period            = usPeriod;
    TimHandle.clockdivision     = TIMER_CKDIV_DIV1;
    TimHandle.repetitioncounter = 0;
	
	timer_init(TIMx, &TimHandle);
	
	timer_auto_reload_shadow_enable(TIMx);
	
	
	/* 配置TIM定时更新中断 (Update) */
	{
        uint8_t irq = 0;	/* 中断号, 定义在 stm32h7xx.h */

        if (TIMx == TIMER0) irq = TIMER0_UP_TIMER9_IRQn;
        else if (TIMx == TIMER1) irq = TIMER1_IRQn;
        else if (TIMx == TIMER2) irq = TIMER2_IRQn;
        else if (TIMx == TIMER3) irq = TIMER3_IRQn;
        else if (TIMx == TIMER4) irq = TIMER4_IRQn;
        else if (TIMx == TIMER5) irq = TIMER5_DAC_IRQn;
        else if (TIMx == TIMER6) irq = TIMER6_IRQn;
        else if (TIMx == TIMER7) irq = TIMER7_UP_TIMER12_IRQn;
		else if (TIMx == TIMER8) irq = TIMER0_BRK_TIMER8_IRQn;
        else if (TIMx == TIMER9) irq = TIMER0_UP_TIMER9_IRQn;
        else if (TIMx == TIMER10) irq = TIMER0_TRG_CMT_TIMER10_IRQn;
        else if (TIMx == TIMER11) irq = TIMER7_BRK_TIMER11_IRQn;
        else if (TIMx == TIMER12) irq = TIMER7_UP_TIMER12_IRQn;
        else if (TIMx == TIMER13) irq = TIMER7_TRG_CMT_TIMER13_IRQn;
        else
        {
            
        }
		nvic_priority_group_set(NVIC_PRIGROUP_PRE2_SUB2);
		nvic_irq_enable(irq, _PreemptionPriority, _SubPriority);
	}
	
	timer_enable(TIMx);
}
